# aviora

./: Cargo.toml  Config-example.toml  README.md
migrations/: 20230808015032_inittables.sql
src/: app.rs  config.rs  db.rs  main.rs  models.rs
src/routes/: civs.rs  mod.rs
