[package]
name = "aviora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.29.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
] }
serde = { version = "1.0.183", features = ["derive"] }
axum = { version = "0.6.20", features = [
    "json",
    "query",
    "tokio",
    "http2",
    "headers",
    "multipart",
    "ws",
] }
toml = "0.7.6"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "migrate",
    "macros",
    "runtime-tokio-native-tls",
    "chrono",
    "json",
    "ipnetwork",
] }
rs-snowflake = "0.6.0"
anyhow = { version = "1.0.71", features = ["std"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
lazy_static = "1.4.0"
once_cell = "1.16.0"
sha2 = "0.10.7"
chrono = { version = "0.4.26", features = ["serde"] }
hex = "0.4.3"
fakeit = "1.1.2"
serde_json = "1.0.104"
reqwest = { version = "0.11.18", features = ["rustls-tls-native-roots"] }
